--- a/index.html
+++ b/index.html
@@ -4,31 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--bootstrap-->
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <!--mis estilos-->
     <link rel="stylesheet" href="./styles/index.css">
-    <!--
-        Fuentes
-    -->
-    <!--Nav-->
+
+    <!-- Fuentes  -->
+       
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
-    <!--Encabezados-->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-
-    <!--Texto-->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
 
-    <title>Cofradía - copia</title>
+    <title>Cofradía</title>
+
+    <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="./assets/icons/favicon_package_v0.16/favicon.ico">
 
 </head>
