--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="./styles/index.css">
 
     <!-- Fuentes  -->
-       
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -69,35 +69,33 @@
             <div class="portada-texto">
                 <h1>Orquesta Juvenil Cofradía</h1>
 
-                <p class="portada_p-a"> Promoviendo la educación musical</p>
+                <p> Promoviendo la educación musical</p>
 
-                <p class="portada_p-b"> Con más de veinte años de trayectoria </p>
+                <p> Con más de veinte años de trayectoria </p>
 
             </div>
 
         </section>
 
 
-        <section class="clasesmusica">
+        <section>
 
-
-
-            <div class="clasesmusica_descripcion">
+            <div class="section__div">
 
                 <h2>Aprender</h2>
 
-                <div class="clasesmusica_descripcion__div">
+                <div class="descripcion">
 
-                    <div class="clasesmusica_descripcion-texto">
+                    <div class="descripcion-texto">
 
-                        <p class="clasesmusica-texto">
+                        <p>
                             Clases personalizadas y adaptadas a las necesidades y metas individuales de quienes deseen
                             aprender
                             a tocar <span class="italic">el Violin, la Viola, el Violoncello,
                                 el Contrabajo o el Piano</span></p>
                         </p>
 
-                        <p class="clasesmusica-texto">
+                        <p>
                             Si querés tomar clases de alguno de estos instrumentos podes escribirnos a X número/mail o
                             llenar el
                             formulario de contacto <a href="./pages/contacto.html">acá</a>
@@ -105,7 +103,7 @@
 
                     </div>
 
-                    <div class="clasesmusica__img">
+                    <div class="descripcion-img">
                         <img src="./assets/img/violin-stradivarius-1920-3.webp" class="img-thumbnail" alt="violin">
                     </div>
 
@@ -115,295 +113,75 @@
 
             </div>
 
-            <!-- Carousel -->
+        </section>
 
-            <div id="carouselExampleRide" class="carousel slide bg-secondary" data-bs-ride="true">
-                <div class="carousel-inner">
+        <section>
+            <div class="section__div">
+                <h2>La Orquesta</h2>
 
+                <div class="descripcion">
 
-                    <div class="carousel-item active">
-                        <div class="instrumento-tarjeta violin ">
-
-                            <h3>Violin</h3>
-                            <p>El violín es el instrumento de cuerda que tiene el rango más agudo en la orquesta,
-                                suele
-                                ser el
-                                responsable de la melodía y el que mayor protagonismo tiene.</p>
-                            <p>Algunos violinistas famosos: <span class="italic">Itzak Perlman, Joshua Bell, Julia
-                                    Fisher,
-                                    Hilary Han</span></p>
-                            <p>Piezas famosas para violin: <span class="italic"><a
-                                        href="https://www.youtube.com/watch?v=laGT9IB2bFo" target="_blank">"El
-                                        verano de
-                                        Vivaldi"</a>,
-                                    <a href="https://www.youtube.com/watch?v=UcL0IsklM3M">Capricho nro. 24
-                                        Pagagnini</a>
-                                    etc</span></p>
-                        </div>
+                    <div class="descripcion-texto">
+                        <p>Con más de 20 años de actividadd se ha convertido en un referente cultural de la ciudad.</p>
+                        <p>
+                            Formada por niños y adolescentes que estudian violín, viola, violoncello y contrabajo
+                            realiza
+                            alrededor
+                            de 20 presentaciones anuales tanto en Bariloche como en ciudades aledañas.
+                        </p>
+                        <p>También trabaja en conjunto con otras agrupaciones musicales locales lo que enriquece
+                            tanto la experiencia de los participantes como la comunidad en general.
+                        </p>
                     </div>
 
-                    <div class="carousel-item">
-                        <div class="instrumento-tarjeta viola">
-                            <h3>Viola</h3>
-
-                            <p> La viola es similar en forma al violín, es un poco más grande y tiene un rango de
-                                sonido
-                                más
-                                grave, Acompaña de cerca las melodías que toca el violín. También puede desempeñarse
-                                como
-                                solista y protagonizar conciertos </p>
-                            <p>Algunos violistas Famosos: <span class="italic">Yuri Bashmet, Kim Kashkashian,
-                                    Pinchas
-                                    Zukerman</span></p>
-                            <p>Obras famosas para Viola: <span class="italic">Concierto para Viola de G. P Telemann,
-                                    Concierto
-                                    para viola de Johan Christian Bach, <a
-                                        href="https://www.youtube.com/watch?v=pCPRe9_kUN0" target="_blank">Sonata
-                                        para viola de Glinka</a> </span>
-
-                        </div>
+                    <div class="descripcion-img">
+                        <img src="./assets/img/violin-stradivarius-1920-3.webp" class="img-thumbnail" alt="violin">
                     </div>
 
 
-                    <div class="carousel-item">
-                        <div class="instrumento-tarjeta violoncello">
-                            <h3>Violoncello</h3>
-
-                            <p>El violoncello tiene una forma muy parecida al violín y a la viola pero es mucho más
-                                grande tanto que para tocarlo el cellista debe sentarse y colocar el instrumento
-                                sobre
-                                sus piernas. Su rango es bastante amplio y versátil, más grave que el violín y la
-                                viola.
-                                Suele acompañar al contrabajo en las partes graves, pero también puede tener
-                                protagonismo con algunas melodías.</p>
-                            <p>Este instrumento se hizo popular gracias al grupo de música <a href=""
-                                    target="_blank">“Two
-                                    Cellos”</a></p>
-                            <p>Algunos cellistas famosos: <span class="italic">Yo-yo Ma, Sol Gabetta, Jaqueline
-                                    Du-pre,
-                                    Mischa Maisky</span></p>
-                            <p>Obras famosas para violoncello: Suite en sol mayor para cello solo de Johan S. Bach,
-                                Concierto en Do mayor de Haydn</p>
-
-                        </div>
-                    </div>
-
-                    <div class="carousel-item">
-                        <div class="instrumento-tarjeta contrabajo">
-                            <h3>Contrabajo</h3>
-
-                            <p>El contrabajo es mucho más grande y más grave, el contrabajista suele tocar de pie.
-                                Este
-                                instrumento se encarga de las partes más graves que sientan las bases para que el
-                                resto
-                                de los sonidos y melodías suenen completas. También es muy usado en formaciones de
-                                jazz
-                                donde se toca mucho con los dedos </p>
-                            <p>Algunos contrabajistas famosos: Zubin Metha, Steinar Raknes,</p>
-                            <p>Piezas famosas para contrabajo:</p>
-
-                        </div>
-                    </div>
-
-                    <div class="carousel-item">
-                        <div class="instrumento-tarjeta piano">
-                            <h3>Piano</h3>
-
-                            <p>
-                                El piano es un instrumento armónico, si bien no suele formar parte de una orquesta,
-                                salvo
-                                que actúe como solista, su estudio es un buen complemento ya que permite a una misma
-                                persona tocar la melodía, parte media y bajos de la música, dando una comprensión y
-                                una
-                                visión general mucho más amplia y completa.
-                            </p>
-                            <p>
-                                Su versatilidad hace que participe en prácticamente todos los géneros musicales.
-                            </p>
-                            <p>
-                                Algunos pianistas famosos: Marta Argerich, Lang-Lang, Glen Gould
-                            </p>
-                            <p>
-                                Obras para piano: Nocturno xx Chopin, Para Elisa de Beethoven, la marcha turca Mozart
-                            </p>
-
-                        </div>
-                    </div>
                 </div>
-
-
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
 
+        </section>
 
-            <div class="espacio-vacio"></div>
+        <section>
+            <div class="section__div">
+                <h2>Encuentro Juvenil de Música de Cámara</h2>
+                <div class="descripcion">
 
-            <!-- <div class="instrumento-a" id="violin">
-                    <div class="instrumento-a-texto">
-                        <h3>Violin</h3>
-                        <p>El violín es el instrumento de cuerda que tiene el rango más agudo en la orquesta, suele ser
-                            el
-                            responsable de la melodía y el que mayor protagonismo tiene.</p>
-                        <p>Algunos violinistas famosos: <span class="italic">Itzak Perlman, Joshua Bell, Julia Fisher,
-                                Hilary Han</span></p>
-                        <p>Piezas famosas para violin: <span class="italic"><a
-                                    href="https://www.youtube.com/watch?v=laGT9IB2bFo" target="_blank">"El verano de
-                                    Vivaldi"</a>,
-                                <a href="https://www.youtube.com/watch?v=UcL0IsklM3M">Capricho nro. 24 Pagagnini</a>
-                                etc</span></p>
-
-                        <ul class="instrumento_ul">
-                            <li><a href="#viola">Viola</a></li>
-                            <li><a href="#violoncello">Violoncello</a></li>
-                            <li><a href="#contrabajo">Contrabajo</a></li>
-                            <li><a href="#piano">Piano</a></li>
-                        </ul>
-
+                    <div class="descripcion-texto">
+                        <p>Uno de los proyectos más significativos que se realizan en el marco de la Orquesta es el
+                            Encuentro
+                            Juvenil de Música de Cámara.
+                        </p>
+                        <p>Esta iniciativa convoca a jóvenes músicos de diversas localidades promoviendo el desarrollo
+                            musical,
+                            la
+                            formación de vínculos personales y artísticos, así como el enriquecimiento humano a través
+                            de la
+                            colaboración musical.
+                        </p>
                     </div>
 
-                    <div class="instrumento-a_img">
-                        <img src="./assets/img/violin-stradivarius-1920-3.webp" alt="violin">
-                    </div>
-
-
-                </div> -->
-
-            <!-- <div class="instrumento-b" id="viola">
-
-                    <div class="instrumento-a_img">
-                        <img src="./assets/img/violin-stradivarius-1920-3.webp" alt="viola">
-                    </div>
-
-                    <div class="instrumento-a-texto">
-                        <h3>Viola</h3>
-
-                        <p> La viola es similar en forma al violín, es un poco más grande y tiene un rango de sonido más
-                            grave, Acompaña de cerca las melodías que toca el violín. También puede desempeñarse como
-                            solista y protagonizar conciertos </p>
-                        <p>Algunos violistas Famosos: <span class="italic">Yuri Bashmet, Kim Kashkashian, Pinchas
-                                Zukerman</span></p>
-                        <p>Obras famosas para Viola: <span class="italic">Concierto para Viola de G. P Telemann,
-                                Concierto
-                                para viola de Johan Christian Bach, <a
-                                    href="https://www.youtube.com/watch?v=pCPRe9_kUN0" target="_blank">Sonata
-                                    para viola de Glinka</a> </span>
-
-                        <ul class="instrumento_ul">
-                            <li><a href="#violin">Violin</a></li>
-                            <li><a href="#violoncello">Violoncello</a></li>
-                            <li><a href="#contrabajo">Contrabajo</a></li>
-                            <li><a href="#piano">Piano</a></li>
-                        </ul>
-                    </div> -->
-
-
-
-
-
-            <!-- <div class="instrumento-a" id="violoncello">
-
-                    <div class="instrumento-a-texto">
-                        <h3>Violoncello</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi inventore laborum quos
-                            vero
-                            doloremque
-                            nisi asperiores exercitationem iste tempore molestias sit, consectetur, nemo ea
-                            necessitatibus
-                            omnis
-                            nulla quo, dolores provident!</p>
-
-                        <ul class="instrumento_ul">
-                            <li><a href="#violin">Violin</a></li>
-                            <li><a href="#viola">Viola</a></li>
-                            <li><a href="#contrabajo">Contrabajo</a></li>
-                            <li><a href="#piano">Piano</a></li>
-                        </ul>
-                    </div>
-
-
-                    <div class="instrumento-a_img">
-                        <img src="/assets/img/un-violoncello-1000x666.jpg" alt="violoncello">
-                    </div>
-
-                </div> -->
-
-            <!-- <div class="instrumento-b" id="contrabajo">
-
-                    <div class="instrumento-a_img">
-                        <img src="./assets/img/contrabajo-señor2.png" alt="contrabajo">
-                    </div>
-
-                    <div class="instrumento-a-texto">
-                        <h3>Contrabajo</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi inventore laborum quos
-                            vero
-                            doloremque
-                            nisi asperiores exercitationem iste tempore molestias sit, consectetur, nemo ea
-                            necessitatibus
-                            omnis
-                            nulla quo, dolores provident!</p>
-
-                        <ul class="instrumento_ul">
-                            <li><a href="#violin">Violin</a></li>
-                            <li><a href="#viola">Viola</a></li>
-                            <li><a href="#violoncello">Violoncello</a></li>
-                            <li><a href="#piano">Piano</a></li>
-                        </ul>
-                    </div>
-
-
-
-                </div>
-
-                <div class="instrumento-c" id="piano">
-
-                    <div class="instrumento-a-texto">
-                        <h3>Piano</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi inventore laborum quos
-                            vero
-                            doloremque
-                            nisi asperiores exercitationem iste tempore molestias sit, consectetur, nemo ea
-                            necessitatibus
-                            omnis
-                            nulla quo, dolores provident!</p>
-
-                        <ul class="instrumento_ul">
-                            <li><a href="#violin">Violin</a></li>
-                            <li><a href="#viola">Viola</a></li>
-                            <li><a href="#violoncello">Violoncello</a></li>
-                            <li><a href="#contrabajo">Contrabajo</a></li>
-                        </ul>
-
-                    </div>
-
-                    <div class="instrumento-a_img">
-                        <img src="./assets/img/piano-camping2chico.jpg" alt="Piano">
+                    <div class="descripcion-img">
+                        <img src="./assets/img/violin-stradivarius-1920-3.webp" class="img-thumbnail" alt="violin">
                     </div>
 
                 </div>
-
-
-
-        </section> -->
+        </section>
 
 
 
 
-            <div class="abajo">
-                <div class="boton_la-orquesta">
-                    <a href="./pages/orquesta.html">La Orquesta</a>
-                </div>
-                <img src="./assets/img/orquesta-blanconegro.jpg" alt="orquesta">
+
+        <div class="espacio-vacio"></div>
+
+        <div class="abajo">
+            <div class="boton_la-orquesta">
+                <a href="./pages/orquesta.html">La Orquesta</a>
             </div>
+            <img src="./assets/img/orquesta-blanconegro.jpg" alt="orquesta">
+        </div>
 
 
     </main>
