trabajo en -index- version movile

--- a/index.html
+++ b/index.html
@@ -88,17 +88,28 @@
 
                     <div class="descripcion-texto">
 
-                        <p>
-                            Clases personalizadas y adaptadas a las necesidades y metas individuales de quienes deseen
+                        <p class="italic">
+                            Clases personalizadas y adaptadas a las necesidades y metas
+                            individuales de quienes deseen
                             aprender
-                            a tocar <span class="italic">el Violin, la Viola, el Violoncello,
-                                el Contrabajo o el Piano</span></p>
+                            a tocar el Violin, la Viola, el Violoncello,
+                            el Contrabajo o el Piano
                         </p>
 
+
                         <p>
-                            Si querés tomar clases de alguno de estos instrumentos podes escribirnos a X número/mail o
-                            llenar el
-                            formulario de contacto <a href="./pages/contacto.html">acá</a>
+                            Si querés tomar clases de alguno de estos instrumentos podes escribirnos a
+                            <a class="italic" href="mailt:fundacion.cofradia@gmail.com">
+                                fundacion.cofradia@gmail.com
+                            </a>,
+                            llamara a
+                            <a class="italic" href="+5492944607870">
+                                +54 9 294-460-7870
+                            </a>
+                            o llenar el formulario de contacto
+                            <a class="italic focus" href="./pages/contacto.html">
+                                acá
+                            </a>
                         </p>
 
                     </div>
@@ -122,20 +133,38 @@
                 <div class="descripcion">
 
                     <div class="descripcion-texto">
-                        <p>Con más de 20 años de actividadd se ha convertido en un referente cultural de la ciudad.</p>
                         <p>
-                            Formada por niños y adolescentes que estudian violín, viola, violoncello y contrabajo
+                            Con más de 20 años de actividad se ha convertido en un
+                            referente cultural de la ciudad.
+                        </p>
+
+                    </div>
+
+                    <div class="descripcion-img">
+
+                        <img src="./assets/img/orquesta-tedx.jpg" class="img-thumbnail"
+                            alt="orquesta en charla TedEx Bariloche">
+                    </div>
+
+                    <div class="descripcion-texto">
+
+                        <p>
+                            Formada por niños y adolescentes que estudian violín, viola, violoncello y
+                            contrabajo,
                             realiza
                             alrededor
                             de 20 presentaciones anuales tanto en Bariloche como en ciudades aledañas.
                         </p>
-                        <p>También trabaja en conjunto con otras agrupaciones musicales locales lo que enriquece
-                            tanto la experiencia de los participantes como la comunidad en general.
+
+                        <p>
+                            También trabaja en conjunto con otras agrupaciones musicales locales lo que
+                            enriquece
+                            tanto la experiencia de los participantes como de la comunidad en general.
                         </p>
                     </div>
 
                     <div class="descripcion-img">
-                        <img src="./assets/img/violin-stradivarius-1920-3.webp" class="img-thumbnail" alt="violin">
+                        <img src="./assets/img/orestaycoro.jpg" class="img-thumbnail" alt="orquesta y coro">
                     </div>
 
 
@@ -154,6 +183,14 @@
                             Encuentro
                             Juvenil de Música de Cámara.
                         </p>
+                    </div>
+
+                    <div class="descripcion-img">
+                        <img src="./assets/img/cuarteto-camara.jpg" class="img-thumbnail"
+                            alt="Cuarteto juvenil de cuerdas">
+                    </div>
+
+                    <div class="descripcion-texto">
                         <p>Esta iniciativa convoca a jóvenes músicos de diversas localidades promoviendo el desarrollo
                             musical,
                             la
@@ -164,7 +201,7 @@
                     </div>
 
                     <div class="descripcion-img">
-                        <img src="./assets/img/violin-stradivarius-1920-3.webp" class="img-thumbnail" alt="violin">
+                        <img src="./assets/img/duo-cello-piano.jpg" class="img-thumbnail" alt="Duo de violoncello y piano">
                     </div>
 
                 </div>
@@ -180,7 +217,7 @@
             <div class="boton_la-orquesta">
                 <a href="./pages/orquesta.html">La Orquesta</a>
             </div>
-            <img src="./assets/img/orquesta-blanconegro.jpg" alt="orquesta">
+            <img class="img-fluid" src="./assets/img/orquesta-blanconegro.jpg" alt="orquesta">
         </div>
 
 
