pequeñas modificaciones y agregados

--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
@@ -37,25 +34,38 @@
     <header class="px-4 border-bottom">
         <nav class="nav navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="logo navbar-brand" href="./index.html"><img src="./assets/img/logo-cofradia-removebg.png"
-                        alt="Logo Cofradia" width="200px"></a>
+                <a class="logo navbar-brand" href="./index.html">
+                    <img src="./assets/img/logo-cofradia-removebg.png" alt="Logo Cofradia" width="200px">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarNav">
+
                     <ul class="nav__ul navbar-nav ms-auto mb-2 mb-md-0">
-                        <li class="nav-item"><a class="activo nav-link text-secondary" href="#">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link text-black" href="./pages/orquesta.html">La Orquesta</a>
+
+                        <li class="nav-item">
+                            <a class="activo nav-link text-secondary" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-black"
-                                href="./pages/actividades.html">Actividades</a>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="./pages/orquesta.html">La Orquesta</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-black"
-                                href="./pages/cronograma.html">Cronograma</a>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="./pages/actividades.html">Actividades</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-black" href="./pages/contacto.html">Contacto</a>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="./pages/cronograma.html">Cronograma</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="./pages/contacto.html">Contacto</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -64,6 +74,7 @@
 
     <!-- seccion-principal -->
     <main>
+
         <section class="portada">
 
             <div class="portada-texto">
@@ -99,11 +110,11 @@
 
                         <p>
                             Si querés tomar clases de alguno de estos instrumentos podes escribirnos a
-                            <a class="italic" href="mailt:fundacion.cofradia@gmail.com">
+                            <a class="italic" href="mailto:fundacion.cofradia@gmail.com">
                                 fundacion.cofradia@gmail.com
                             </a>,
                             llamara a
-                            <a class="italic" href="+5492944607870">
+                            <a class="italic" href="tel:+5492944607870">
                                 +54 9 294-460-7870
                             </a>
                             o llenar el formulario de contacto
@@ -117,14 +128,12 @@
                     <div class="descripcion-img">
                         <img src="./assets/img/violin-stradivarius-1920-3.webp" class="img-thumbnail" alt="violin">
                     </div>
-
-
                 </div>
-
 
             </div>
 
         </section>
+
 
         <section>
             <div class="section__div">
@@ -179,7 +188,8 @@
                 <div class="descripcion">
 
                     <div class="descripcion-texto">
-                        <p>Uno de los proyectos más significativos que se realizan en el marco de la Orquesta es el
+                        <p>
+                            Uno de los proyectos más significativos que se realizan en el marco de la Orquesta es el
                             Encuentro
                             Juvenil de Música de Cámara.
                         </p>
@@ -191,7 +201,8 @@
                     </div>
 
                     <div class="descripcion-texto">
-                        <p>Esta iniciativa convoca a jóvenes músicos de diversas localidades promoviendo el desarrollo
+                        <p>
+                            Esta iniciativa convoca a jóvenes músicos de diversas localidades promoviendo el desarrollo
                             musical,
                             la
                             formación de vínculos personales y artísticos, así como el enriquecimiento humano a través
@@ -201,17 +212,14 @@
                     </div>
 
                     <div class="descripcion-img">
-                        <img src="./assets/img/duo-cello-piano.jpg" class="img-thumbnail" alt="Duo de violoncello y piano">
+                        <img src="./assets/img/duo-cello-piano.jpg" class="img-thumbnail"
+                            alt="Duo de violoncello y piano">
                     </div>
 
                 </div>
+            </div>
         </section>
 
-
-
-
-
-        <div class="espacio-vacio"></div>
 
         <div class="abajo">
             <div class="boton_la-orquesta">
@@ -230,15 +238,18 @@
             <p class="text-center ">Desde 1995</p>
 
             <ul class="footer__ul nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a class="nav-link px-2 text-body-secondary"
+                <li class="nav-item">
+                    <a class="nav-link px-2 text-body-secondary"
                         href="https://instagram.com/orquesta_cofradia?igshid=MzRlODBiNWFlZA==" target="_blank"><img
                             src="./assets/icons/bxl-instagram.svg"></a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.facebook.com/profile.php?id=100063644704595" target="_blank"><img
                             src="./assets/icons/bxl-facebook-circle.svg"></a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link px-2 text-body-secondary"
                         href="https://www.youtube.com/@fundacioncofradiafundacion9782" target="_blank"><img
