--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -104,6 +104,21 @@
 
             <input type="submit" value="Enviar">
         </form>
+
+        <ul class="contacto_ul">
+            <li>
+                <a href="mailto:fundacion.cofradia@gmail.com">
+                    <img src="../assets/icons/bxs-correo.svg"> fundacion.cofradia@gmail.com
+                </a>
+            </li>
+
+            <li>
+                <a href="tel:+5492944607870">
+                    <img src="../assets/icons/bxs-phone.svg"> +54 9 294-460-7870
+                </a>
+            </li>
+        </ul>
+
     </main>
 
     <!--Footer-->
