pequeños arreglos en el nav para que quede igual en todas las páginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,26 +33,42 @@
 </head>
 
 <body>
+    <!-- Nav y header-->
     <header class="px-4">
-        <nav class="navbar navbar-expand-md">
+        <nav class="nav navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="logo navbar-brand" href="../index.html"><img src="../assets/img/logo-cofradia-removebg.png"
-                        alt="Logo Cofradia" width="200px"></a>
+                <a class="logo navbar-brand" href="./index.html">
+                    <img src="../assets/img/logo-cofradia-removebg.png" alt="Logo Cofradia" width="200px">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-                        <li class="nav-item"><a class="nav-link text-black" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link text-black" href="./orquesta.html">La Orquesta</a>
+
+                    <ul class="nav__ul navbar-nav ms-auto mb-2 mb-md-0">
+
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-black" href="./actividades.html">Actividades</a>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="./orquesta.html">La Orquesta</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-black" href="./cronograma.html">Cronograma</a>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="./actividades.html">Actividades</a>
                         </li>
-                        <li class="nav-item"><a class="activo nav-link text-secondary" href="#">Contacto</a>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="./cronograma.html">Cronograma</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="activo nav-link text-secondary" href="#">Contacto</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
