trabajo en -la orquesta-

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <a class="italic" href="mailto:fundacion.cofradia@gmail.com">
                                 fundacion.cofradia@gmail.com
                             </a>,
-                            llamara a
+                            llamar a
                             <a class="italic" href="tel:+5492944607870">
                                 +54 9 294-460-7870
                             </a>
