--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -86,7 +86,15 @@
 
             </div>
 
-            <div class="proyecto1">
+            <div class="second-nav">
+                <ul>
+                    <li><a href="#clases">Clases</a></li>
+                    <li><a href="#orquestas">Orquestas</a></li>
+                    <li><a href="#ejmc">Encuentro Juvenil de Música de cámara</a></li>
+                </ul>
+            </div>
+
+            <div id="clases" class="text__section">
                 <h2>Clases de instrumentos</h2>
                 <img src="s" alt="">
                 <p> Clases personalizadas y adaptadas a las necesidades y metas individuales de quienes deseen
@@ -230,8 +238,8 @@
 
             </div>
 
-            <div class="proyecto2">
-                <h2>Proyecto 2</h2>
+            <div id="orquestas" class="text__section">
+                <h2>Orquestas</h2>
                 <img src="s" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
                     temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
@@ -246,8 +254,8 @@
 
             </div>
 
-            <div class="proyecto3">
-                <h2>Proyecto 3</h2>
+            <div id="ejmc" class="text__section">
+                <h2>Encuentro Juvenil de Música de Cámara</h2>
                 <img src="s" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
                     temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
