--- a/pages/orquesta.html
+++ b/pages/orquesta.html
@@ -73,7 +73,7 @@
             </div>
         </div>
 
-        <section class="orquesta__section">
+        <section class="text__section">
             <!-- <h2>Historia</h2> -->
 
 
@@ -84,7 +84,7 @@
                 habilidades técnicas y expresivas, especialmente a través de la práctica orquestal.
             </p>
 
-            <div class="historia__img">
+            <div class="orquesta__img">
                 <img src="../assets/img/fila-de-cellos.jpg" alt="fila de cellos">
             </div>
 
@@ -104,6 +104,10 @@
                 Chile, acompañando a músicos y grupos destacados.
             </p>
 
+            <div class="orquesta__img">
+                <img src="../assets/img/orquesta-trenquelauquen.jpg" alt="fila de cellos">
+            </div>
+
             <div class="video">
                 <div class="iframe">
                     <iframe  src="https://www.youtube.com/embed/Z3SKQ9jd4Sw?si=DH17Qy6EYAIsn4l8"
@@ -121,7 +125,12 @@
             </div>
 
 
-            <img src="" alt="">
+            <div class="orquesta__img">
+                <img src="../assets/img/orquesta-tedx.jpg" alt="fila de cellos">
+            </div>
+
+
+            
 
         </section>
 
@@ -129,7 +138,7 @@
             <img src="" alt="">
         </div>
 
-        <section class="orquesta__section">
+        <!-- <section class="text__section">
             <h2>Actuaciones con otras agrupaciones</h2>
             <img src="" alt="">
             <img src="" alt="">
@@ -143,7 +152,7 @@
                 ut nemo, animi ipsum cumque quas optio adipisci, impedit dicta ex velit inventore exercitationem quasi!
             </p>
 
-        </section>
+        </section> -->
 
         
 
