propiedad sticky al nav y estilos a -actividades-

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -94,21 +94,34 @@
                 </ul>
             </div>
 
-            <div id="clases" class="text__section">
+            <section id="clases" class="text__section">
                 <h2>Clases de instrumentos</h2>
                 <img src="s" alt="">
-                <p> Clases personalizadas y adaptadas a las necesidades y metas individuales de quienes deseen
+                <p>
+                    Clases personalizadas y adaptadas a las necesidades y metas individuales de quienes deseen
                     aprender
                     a tocar <span class="italic">el Violin, la Viola, el Violoncello,
-                        el Contrabajo o el Piano</span></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
+                        el Contrabajo o el Piano</span>
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni,
+                    earum
                     temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
-                    consectetur vitae? Minima, corporis quidem.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
+                    consectetur vitae? Minima, corporis quidem.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni,
+                    earum
                     temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
-                    consectetur vitae? Minima, corporis quidem.</p>
+                    consectetur vitae? Minima, corporis quidem.
+                </p>
 
-                <div id="carouselExampleRide" class="carousel slide bg-secondary" data-bs-ride="true">
+
+
+
+                <!-- Carousel -->
+
+                <!-- <div id="carouselExampleRide" class="carousel slide bg-secondary" data-bs-ride="true">
                     <div class="carousel-inner">
 
 
@@ -234,11 +247,11 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
-                </div>
+                </div> -->
 
-            </div>
+            </section>
 
-            <div id="orquestas" class="text__section">
+            <section id="orquestas" class="text__section">
                 <h2>Orquestas</h2>
                 <img src="s" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
@@ -252,9 +265,9 @@
                     consectetur vitae? Minima, corporis quidem.</p>
 
 
-            </div>
+            </section>
 
-            <div id="ejmc" class="text__section">
+            <section id="ejmc" class="text__section">
                 <h2>Encuentro Juvenil de Música de Cámara</h2>
                 <img src="s" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
@@ -268,7 +281,7 @@
                     consectetur vitae? Minima, corporis quidem.</p>
 
 
-            </div>
+            </section>
 
 
 
