--- a/pages/orquesta.html
+++ b/pages/orquesta.html
@@ -78,7 +78,7 @@
 
 
 
-            <p>Se trata de una iniciativa privada, fue fundada en 1995 por Diego Díaz y Kyoko Kurokawa quienes la siguen
+            <p>Se trata de una iniciativa privada, fue fundada en San Carlos de Bariloche - 1995 - por Diego Díaz y Kyoko Kurokawa quienes la siguen
                 dirigiendo en la actualidad. Dos apasionados de la música, que desde el principio se centraron en la
                 formación musical, brindando un espacio para que los jóvenes músicos aprendan juntos y mejoren sus
                 habilidades técnicas y expresivas, especialmente a través de la práctica orquestal.
@@ -126,7 +126,7 @@
 
 
             <div class="orquesta__img">
-                <img src="../assets/img/orquesta-tedx.jpg" alt="fila de cellos">
+                <img src="../assets/img/orquesta-tedx.jpg" alt="Orquesta Cofradía en Trenquelauquen">
             </div>
 
 
