comienzo a incluir sass

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="nav navbar navbar-expand-md">
             <div class="container-fluid">
                 <a class="logo navbar-brand" href="./index.html">
-                    <img src="./assets/img/logo-cofradia-removebg.png" alt="Logo Cofradia" width="200px">
+                    <img src="./assets/img/logo-cofradia-removebg.png" alt="Logo Cofradia">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -154,7 +154,7 @@
                         <img src="./assets/img/orquesta-tedx.jpg" class="img-thumbnail"
                             alt="orquesta en charla TedEx Bariloche">
                     </div>
-
+                
                     <div class="descripcion-texto">
 
                         <p>
