--- a/pages/cronograma.html
+++ b/pages/cronograma.html
@@ -35,7 +35,7 @@
         <nav class="nav navbar navbar-expand-md">
             <div class="container-fluid">
                 <a class="logo navbar-brand" href="../index.html"><img src="../assets/img/logo-cofradia-removebg.png"
-                        alt="Logo Cofradia" width="200px"></a>
+                        alt="Logo Cofradia"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
