--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,8 +37,8 @@
     <header class="px-4">
         <nav class="nav navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="logo navbar-brand" href="./index.html">
-                    <img src="../assets/img/logo-cofradia-removebg.png" alt="Logo Cofradia" width="200px">
+                <a class="logo navbar-brand" href="../index.html">
+                    <img src="../assets/img/logo-cofradia-removebg.png" alt="Logo Cofradia">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
