--- a/pages/orquesta.html
+++ b/pages/orquesta.html
@@ -36,7 +36,7 @@
         <nav class="nav navbar navbar-expand-md">
             <div class="container-fluid">
                 <a class="logo navbar-brand" href="../index.html"><img src="../assets/img/logo-cofradia-removebg.png"
-                        alt="Logo Cofradia" width="200px"></a>
+                        alt="Logo Cofradia"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -90,7 +90,7 @@
 
 
             <p>Teniendo la democratización de la educación musical como uno de sus pilares principales, otorgan
-                <strong>becas</strong> a estudiantes de bajos recursos económicos para garantizar que todos puedan
+                becas a estudiantes de bajos recursos económicos para garantizar que todos puedan
                 acceder a la música.
             </p>
 
