trabajo pasando los estilos a sass-pimera parte

--- a/pages/cronograma.html
+++ b/pages/cronograma.html
@@ -20,10 +20,14 @@
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
 
+    <!--meta: description, keywords -->
+    <meta name="description" content="Promoviendo la educación musical en Bariloche, brinda más de 20 presentaciones 
+    al año tanto en Bariloche como en localidades aledañas">
+
+    <meta name="keywords" content="música, cultura, espectáculo, concierto, orquesta juvenil">
 
 
-
-    <title>Cronograma</title>
+    <title>Cofradía | Cronograma</title>
 
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
@@ -71,7 +75,7 @@
 
     <main class="container-fluid">
 
-        <div class="portada">
+        <div class="portada_cronograma">
             <h1>Cronograma</h1>
 
         </div>
