--- a/pages/orquesta.html
+++ b/pages/orquesta.html
@@ -24,10 +24,16 @@
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
 
-    <title>La Orquesta</title>
+    <!--meta: description, keywords -->
+    <meta name="description" content="Promoviendo la educación musical en Bariloche, formada por
+    niños y adolescentes que estudian violín, viola, violoncello y contrabajo">
 
-     <!--favicon-->
-     <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
+    <meta name="keywords" content="música, clases, educación, cultura, espectáculo, concierto, juvenil">
+
+    <title>Cofradía | La Orquesta</title>
+
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
 
 </head>
 
@@ -78,7 +84,8 @@
 
 
 
-            <p>Se trata de una iniciativa privada, fue fundada en San Carlos de Bariloche - 1995 - por Diego Díaz y Kyoko Kurokawa quienes la siguen
+            <p>Se trata de una iniciativa privada, fue fundada en San Carlos de Bariloche - 1995 - por Diego Díaz y
+                Kyoko Kurokawa quienes la siguen
                 dirigiendo en la actualidad. Dos apasionados de la música, que desde el principio se centraron en la
                 formación musical, brindando un espacio para que los jóvenes músicos aprendan juntos y mejoren sus
                 habilidades técnicas y expresivas, especialmente a través de la práctica orquestal.
@@ -110,7 +117,7 @@
 
             <div class="video">
                 <div class="iframe">
-                    <iframe  src="https://www.youtube.com/embed/Z3SKQ9jd4Sw?si=DH17Qy6EYAIsn4l8"
+                    <iframe src="https://www.youtube.com/embed/Z3SKQ9jd4Sw?si=DH17Qy6EYAIsn4l8"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
@@ -130,7 +137,7 @@
             </div>
 
 
-            
+
 
         </section>
 
@@ -154,15 +161,15 @@
 
         </section> -->
 
-        
+
 
     </main>
 
 
 
 
-     <!--Footer-->
-     <div class="container-flex">
+    <!--Footer-->
+    <div class="container-flex">
         <footer class="py-3 my-4 bg-secondary">
 
             <p class="text-center ">Desde 1995</p>
