--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--bootstrap-->
     <link rel="stylesheet" href="./css/bootstrap.css">
     <!--mis estilos-->
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 
     <!-- Fuentes  -->
 
@@ -21,6 +21,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
+
+    <!--meta: description, keywords -->
+    <meta name="description" content="Promoviendo la educación musical en Bariloche, con más de 20 años de trayectoria">
+
+    <meta name="keywords" content="música, clases, educación, cultura, espectáculo, concierto, juvenil">
 
     <title>Cofradía</title>
 
@@ -37,6 +42,7 @@
                 <a class="logo navbar-brand" href="./index.html">
                     <img src="./assets/img/logo-cofradia-removebg.png" alt="Logo Cofradia">
                 </a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -154,7 +160,7 @@
                         <img src="./assets/img/orquesta-tedx.jpg" class="img-thumbnail"
                             alt="orquesta en charla TedEx Bariloche">
                     </div>
-                
+
                     <div class="descripcion-texto">
 
                         <p>
