--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,10 +22,13 @@
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
 
+    <!--meta: description, keywords -->
+    <meta name="description" content="Promoviendo la educación musical en Bariloche, con más de 20 años de trayectoria">
+
+    <meta name="keywords" content="música, clases, educación, cultura, espectáculo, concierto, juvenil">
 
 
-
-    <title>Contacto</title>
+    <title>Cofradía | Contacto</title>
 
     <!--favicon-->
     <link rel="icon" type="image/x-icon" sizes="32x32" href="../assets/icons/favicon_package_v0.16/favicon.ico">
