trabajo pasando los estilos a sass

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- seccion-principal -->
     <main>
 
-        <section class="portada">
+        <section class="index__portada">
 
             <div class="portada-texto">
                 <h1>Orquesta Juvenil Cofradía</h1>
