--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../styles/contacto.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
 
 </head>
 
-<body>
+<body class="contacto__body">
     <!-- Nav y header-->
     <header class="px-4">
         <nav class="nav navbar navbar-expand-md">
@@ -91,7 +91,7 @@
             <input type="number" id="edad" name="edad" min="4" max="99" placeholder="Edad" class="datoscontacto">
 
             <div class="form__div-checkbox">
-                <h3>¿Qué instrumento te interesa aprender?</h3>
+                <h2>¿Qué instrumento te interesa aprender?</h2>
 
                 <div class="form__checkbox__div">
                     <input type="checkbox" id="violin" name="instrumento" value="violin"> <label
