--- a/pages/orquesta.html
+++ b/pages/orquesta.html
@@ -67,7 +67,7 @@
 
     <main>
 
-        <div class="portada">
+        <div class="orquesta__portada">
             <div class="portada-texto">
                 <h1>La Orquesta</h1>
 
