termino de pasar -orquesta- a sass

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -27,10 +27,10 @@
         rel="stylesheet">
 
     <!--meta: description, keywords -->
-        <meta name="description" content="Promoviendo la educación musical en Bariloche, 
+    <meta name="description" content="Promoviendo la educación musical en Bariloche, 
         diversas actividades enfocadas en el desarrollo musical de niños y jóvenes">
 
-        <meta name="keywords" content="música, educación, clases, actividades juveniles">
+    <meta name="keywords" content="música, educación, clases, actividades juveniles">
 
     <title>Cofradía | Actividades</title>
 
@@ -102,24 +102,40 @@
             <section id="clases" class="text__section">
                 <h2>Clases de instrumentos</h2>
                 <img src="s" alt="">
+
                 <p>
-                    Clases personalizadas y adaptadas a las necesidades y metas individuales de quienes deseen
-                    aprender
-                    a tocar <span class="italic">el Violin, la Viola, el Violoncello,
-                        el Contrabajo o el Piano</span>
+                    Con un enfoque hacia la música clásica, se brindan clases personalizadas y adaptadas a las
+                    necesidades y metas individuales de quienes deseen aprender a tocar el Violín, la Viola, el
+                    Violoncello, el Contrabajo o el Piano
                 </p>
+
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni,
-                    earum
-                    temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
-                    consectetur vitae? Minima, corporis quidem.
+                    Los alumnos tienen la posibilidad de participar de diferentes agrupaciones y contar con espacios
+                    donde presentar los avances obtenidos en vivo. Cada año se realizan dos muestras en las cuales los
+                    estudiantes tienen la oportunidad de vivir la experiencia de compartir frente a un público la música
+                    que han estado aprendiendo.
                 </p>
+
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni,
-                    earum
-                    temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
-                    consectetur vitae? Minima, corporis quidem.
+                    Además, los estudiantes jóvenes más avanzados tienen la oportunidad de ser seleccionados para formar
+                    parte de la Orquesta de Cámara Juvenil Cofradía. Esta orquesta realiza múltiples presentaciones a lo
+                    largo del año y ha sido el punto de partida de músicos que ahora forman parte de prestigiosas
+                    orquestas tanto a nivel nacional como internacional
                 </p>
+
+                <p>
+                    Si querés más info o tomar clases de alguno de estos instrumentos podes escribirnos a
+                    <a class="italic" href="mailto:fundacion.cofradia@gmail.com">
+                        fundacion.cofradia@gmail.com
+                    </a>,
+                    llamar a
+                    <a class="italic" href="tel:+5492944607870">
+                        +54 9 294-460-7870
+                    </a>
+                    o llenar el formulario de contacto
+                    <a class="italic focus" href="./pages/contacto.html">
+                        acá
+                    </a>
 
 
             </section>
@@ -127,15 +143,64 @@
             <section id="orquestas" class="text__section">
                 <h2>Orquestas</h2>
                 <img src="s" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
-                    temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
-                    consectetur vitae? Minima, corporis quidem.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
-                    temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
-                    consectetur vitae? Minima, corporis quidem.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus nulla esse magni, earum
-                    temporibus deleniti sapiente corrupti quae officiis accusamus necessitatibus sed magnam saepe
-                    consectetur vitae? Minima, corporis quidem.</p>
+
+                <h3>Orquesta de Cámara Juvenil Cofradía</h3>
+
+                <p>
+                    Enfocada en enseñar música y cultivar el talento de sus jóvenes miembros, esta formada por
+                    niños y adolescentes que estudian violín, viola, violoncello y contrabajo.
+                </p>
+
+                <p>
+                    Su función específica es complementar la instrucción musical a partir de la actividad
+                    grupal, especialmente la práctica orquestal, para un adecuado desarrollo técnico y
+                    expresivo, fomentando las interacciones humanas, el trabajo en equipo y el sentido de
+                    responabilidad y pertenencia.
+                </p>
+
+                <p>
+                    Por esto mismo también trabaja en conjunto y realiza presentaciones con otras organizaciones
+                    musicales de la zona y del resto del país como ser:</p>
+                <ul>
+                    <li>Coro de Niños y Jóvenes Cantores Bariloche</li>
+                    <li>Coro Juvenil municipal Bariloche</li>
+                    <li>Sinfónica Juvenil Nacional José de San Martín</li>
+                    <li>Orquesta Filarmónica Río Negro</li>
+                </ul>
+
+
+                <h3>TOI (Taller Orquestal de Iniciación)</h3>
+
+                <p>
+                    Dentro del Proyecto Cofradía, se presenta una actividad de iniciación, especialmente
+                    pensada para los más pequeños, donde se introduce a los niños en el mundo de la
+                    música orquestal a través de instrumentos de cuerdas frotadas.
+                </p>
+
+                <p>
+                    La modalidad de trabajo incluye clases individuales de instrumento, una instrucción
+                    teórico-práctica en el lenguaje musical como complemento, y la práctica orquestal
+                    desde el comienzo del aprendizaje, adaptada para que los niños disfruten del
+                    proceso.
+                </p>
+
+                <div>
+                    <img src="../assets/img/instrumentos1-removebg-preview.png" alt="varios instrumentos de cuerdas">
+                </div>
+                
+
+                <p>
+                    Para que los niños puedan comenzar su viaje musical, se dispone de una dotación
+                    básica de instrumentos, que al principio se entregan en préstamo para prácticas
+                    individuales y grupales. Con el tiempo, los instrumentos serán reemplazados a medida
+                    que cada estudiante vaya adquiriendo su propio instrumento.
+                </p>
+
+                <p>
+                    La metodología es la misma que tiene un gran éxito con los miembros de la Orquesta
+                    de Cámara Juvenil Cofradía desde su creación y está diseñada para que los niños
+                    disfruten al máximo de su experiencia musical."
+                </p>
 
 
             </section>
