--- a/pages/orquesta.html
+++ b/pages/orquesta.html
@@ -7,7 +7,7 @@
     <!--bootstrap-->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <!--mis estilos-->
-    <link rel="stylesheet" href="../styles/orquesta.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
